tests/baselines/reference/iterableArrayPattern9(strict=true).errors.txt
iterableArrayPattern9.ts(2,13): error TS7008: Member 'x' implicitly has an 'any' type.
iterableArrayPattern9.ts(3,25): error TS7008: Member 'y' implicitly has an 'any' type.


==== iterableArrayPattern9.ts (2 errors) ====
    function fun([a, b] = new FooIterator) { }
    class Bar { x }
                ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    class Foo extends Bar { y }
                            ~
!!! error TS7008: Member 'y' implicitly has an 'any' type.
    class FooIterator {
        next() {
            return {
                value: new Foo,
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }